--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.image {
+  height: 290px;
+  height: 290px;
+}
+
+.codigo-qr {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  border: 2px solid #eee;
+}
