--- a/src/app/components/generate-qr/generate-qr.component.html
+++ b/src/app/components/generate-qr/generate-qr.component.html
@@ -4,7 +4,7 @@
     <input
       type="text"
       class="form-control mt-3"
-      placeholder="Por favor ingresa un dirección url"
+      placeholder="Por favor ingresa una dirección url"
       #url
     />
     <br />
