implementación del footer

--- a/src/app/components/generate-qr/generate-qr.component.html
+++ b/src/app/components/generate-qr/generate-qr.component.html
@@ -1,5 +1,5 @@
-<div class="row pt-5 animated fadeIn fast">
-  <div class="col-md-6 text-center pt-5">
+<div class="row pt-4 animated fadeIn fast">
+  <div class="col-md-6 text-center pt-3">
     <h1 class="text-center">Genera tu código qr</h1>
     <input
       type="text"
@@ -22,7 +22,7 @@
     </div>
     <button
       type="button"
-      class="btn btn-primary mt-4"
+      class="btn btn-primary mt-3 mb-4"
       (click)="downloadQr(data)"
     >
       Descargar QR
